# cadmium

./: .clang-tidy  .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build_cmake.yml
cmake/: BuildSettings.cmake  MacOSXBundleInfo.plist.in  cadmium.rc.in  raylib.patch  zxorm.patch
docs/: Doxyfile.in
examples/: README.md
examples/CHIP8/vip-chip8-tpd/: chip8tpd-test.8o  chip8tpd-test.ch8
examples/MegaChip8/: mcblendtest.8o  mcblendtest.mc8
examples/Universal/: uniblinky.8o
examples/XO-CHIP/: color-test.8o  color-test.xo8
resources/: CMakeLists.txt  cadmium.icns  minshell.html
resources/files/: video-330.fs  video-330.vs  video-es2.fs  video-es2.vs
src/: CMakeLists.txt  about.hpp  c8capturehost.cpp  c8capturehost.hpp  cadmium.cpp  cadmium.rc  chip8emuhostex.cpp  chip8emuhostex.hpp  circularbuffer.cpp  circularbuffer.hpp  configuration.cpp  configuration.hpp  database.cpp  database.hpp  debugger.cpp  debugger.hpp  editor.cpp  editor.hpp  emuhostex.cpp  emuhostex.hpp  filesystem.hpp  highlighter.cpp  highlighter.hpp  icons.h  knownfiles.ipp  lexer.hpp  librarian.cpp  librarian.hpp  logview.cpp  logview.hpp  minshell.html  resourcemanager.cpp  resourcemanager.hpp  rlguippimpl.cpp  stylemanager.cpp  stylemanager.hpp  systemtools.cpp  systemtools.hpp  texturescaler.hpp  threadpool.hpp
src/c8db/: database.hpp
src/emulation/: CMakeLists.txt  c8bfile.hpp  cdp1802.hpp  cdp186x.cpp  cdp186x.hpp  chip8compiler.cpp  chip8compiler.hpp  chip8cores.cpp  chip8cores.hpp  chip8decompiler.cpp  chip8decompiler.hpp  chip8dream.cpp  chip8dream.hpp  chip8emulatorbase.cpp  chip8emulatorbase.hpp  chip8emulatorhost.hpp  chip8generic.cpp  chip8generic.hpp  chip8genericbase.cpp  chip8genericbase.hpp  chip8meta.hpp  chip8opcodedisass.cpp  chip8opcodedisass.hpp  chip8options.cpp  chip8options.hpp  chip8realcorebase.hpp  chip8strict.cpp  chip8strict.hpp  chip8variants.hpp  chip8vip.cpp  chip8vip.hpp  chipsound.hpp  config.hpp  coreregistry.cpp  coreregistry.hpp  cosmacvip.cpp  cosmacvip.hpp  datavariants.cpp  datavariants.hpp  dream6800.cpp  (+27 more)
src/emulation/hardware/: cdp1802.hpp  cdp186x.cpp  cdp186x.hpp  emuint.hpp  genericcpu.hpp  hpsaturnl2.hpp  integer.hpp  keymatrix.hpp  m6800.hpp  m6800_mk2.hpp  mc682x.cpp  mc682x.hpp  saturnexecutor.hpp
test/: CMakeLists.txt  basic_opcode_tests.cpp  basic_opcode_tests.hpp  cdp1802sst.cpp  cdp1802test.cpp  chip8adapter.cpp  chip8adapter.hpp  chip8testhelper.hpp  emuint_tests.cpp  expressionist_tests.cpp  fuzzer.cpp  fuzzer.hpp  heuristicint_tests.cpp  m6800mock.hpp  m6800test.cpp  main.cpp  superchip_tests.cpp  test_suite_tests.cpp  time_test.cpp  variant_specific_opcode_tests.cpp  variantset_test.cpp  web_test.cpp
test-roms/: Makefile  chip8e-test.8o  chip8x-color-mode-test.8o  chromatophore-hp48-draw.8o  cmark77.8o  cmark77_math.8o  schip-test.8o  xochip-sound-test.8o
test-roms/inc/: font-header.8o  font-library.8o
test-roms/inc/fonts/: 3-pix.8o  4-pix-high.8o  4-pix-low.8o  5-pix-narrow.8o  5-pix-wide.8o  6-pix.8o
test/cores/: README.md
tools/: CMakeLists.txt  c8db.cpp  chiplet.cpp  color_constants.py  colorsort.cpp  decompiler.cpp  font.txt  fontgenerator.cpp  gen_saturn_decode.py  hp48prgtest.cpp  hpsaturnbase.cpp  hpsaturnbase.hpp  icongenerator.cpp  identify.py  imageconv.cpp  programs_converter.py  resourcer.cpp  rpgt.cpp  soundfreq.cpp
