cmake_minimum_required(VERSION 3.0...3.24)

set(CMAKE_OSX_DEPLOYMENT_TARGET "11.0" CACHE STRING "Minimum MacOS deployment version" FORCE)
project(cadmium VERSION 1.9.90 LANGUAGES C CXX)
if (CMAKE_VERSION VERSION_GREATER_EQUAL "3.21.0")
    cmake_policy(VERSION 3.21)
endif()
if (CMAKE_VERSION VERSION_GREATER_EQUAL "3.24.0")
    cmake_policy(SET CMP0135 NEW)
endif()

include(cmake/BuildSettings.cmake)
include(${doctest_SOURCE_DIR}/scripts/cmake/doctest.cmake)
enable_testing()
include_directories(src external)

if(WITH_ASAN)
add_compile_options(-fsanitize=address)
add_link_options(-fsanitize=address)
endif()

add_code_coverage_all_targets(EXCLUDE tools/*)

add_subdirectory(external)
add_subdirectory(tools)
add_subdirectory(resources)

add_subdirectory(src)
add_subdirectory(test)

if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/experimental")
#    add_subdirectory(experimental)
endif()

set(CPACK_PACKAGE_VENDOR "gulrak.net")
set(CPACK_PACKAGE_CONTACT "s.schuemann@pobox.com")
set(CPACK_PACKAGE_HOMEPAGE_URL "https://github.com/gulrak/cadmium")
set(CPACK_PACKAGE_DESCRIPTION_SUMMARY "Cadmium - A CHIP-8 variant emulation and development environment")
set(CPACK_PACKAGE_VERSION_MAJOR ${PROJECT_VERSION_MAJOR})
set(CPACK_PACKAGE_VERSION_MINOR ${PROJECT_VERSION_MINOR})
set(CPACK_PACKAGE_VERSION_PATCH ${PROJECT_VERSION_PATCH})
set(CPACK_RESOURCE_FILE_LICENSE "${CMAKE_CURRENT_SOURCE_DIR}/LICENSE")
set(CPACK_RESOURCE_FILE_README "${CMAKE_CURRENT_SOURCE_DIR}/README.md")
if(WIN32 OR APPLE)
set(CPACK_GENERATOR "ZIP" CACHE STRING "Generators to support. semi-colon delimited list")
else()
set(CPACK_GENERATOR "TGZ" CACHE STRING "Generators to support. semi-colon delimited list")
endif()
include(CPack)
cpack_add_component(cadmium_app)
